@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/rackspace-monitoring/rackspace-monitoring-0.5.4.ebuild,v 1.1 2014/02/08 01:13:13 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/rackspace-monitoring/rackspace-monitoring-0.6.2.ebuild,v 1.1 2014/06/02 21:01:10 prometheanfire Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -18,8 +18,7 @@ IUSE="test"
 
 TEST_DEPENDS="dev-python/mock[${PYTHON_USEDEP}]
 			dev-python/pep8[${PYTHON_USEDEP}]"
-RDEPEND=">=dev-python/libcloud-0.12.4[${PYTHON_USEDEP}]
-		<=dev-python/libcloud-0.13[${PYTHON_USEDEP}]"
+RDEPEND=">=dev-python/libcloud-0.14.0[${PYTHON_USEDEP}]"
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
 		test? ( ${TEST_DEPENDS}
 				${RDEPEND} )"
