@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare test
-DEPEND=dev-python/setuptools[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] test? ( dev-python/mock[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pep8[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] >=dev-python/libcloud-0.12.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <=dev-python/libcloud-0.13[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-DESCRIPTION=Client library for Rackspace Cloud Monitoring.
-EAPI=5
-HOMEPAGE=https://github.com/racker/rackspace-monitoring
-IUSE=test python_targets_python2_7
-KEYWORDS=~amd64 ~x86
-LICENSE=Apache-2.0
-RDEPEND=>=dev-python/libcloud-0.12.4[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] <=dev-python/libcloud-0.13[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
-REQUIRED_USE=|| ( python_targets_python2_7 )
-SLOT=0
-SRC_URI=mirror://pypi/r/rackspace-monitoring/rackspace-monitoring-0.5.4.tar.gz
-_eclasses_=distutils-r1	0ffe72d093023ff4f69e4ceaf6f63e4e	eutils	025442f2eecab39ad0b4e541b6e142af	multibuild	46527a4656956da3d58acff72c9b59b1	multilib	fac675dcccf94392371a6abee62d909f	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	6f0183db47dc66fccb7a6899f7209b48	python-utils-r1	8ba35e0dacf49c6cae65901d183c971f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=7dc1f3230296d1c51743d316e0bc01d4
