@@ -1,0 +1,13 @@
+DEFINED_PHASES=install postinst prepare prerm setup
+DEPEND=|| ( virtual/httpd-cgi virtual/httpd-fastcgi ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
+DESCRIPTION=DokuWiki is a simple to use Wiki aimed at a small company's documentation needs.
+EAPI=4
+HOMEPAGE=http://wiki.splitbrain.org/wiki:dokuwiki
+IUSE=gd vhosts
+KEYWORDS=~amd64 ~ppc ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=>=dev-lang/php-5.3[xml] gd? ( || ( dev-lang/php[gd] media-gfx/imagemagick ) ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
+SLOT=20140505
+SRC_URI=http://download.dokuwiki.org/src/dokuwiki/dokuwiki-2014-05-05.tgz
+_eclasses_=depend.php	df169a364e191b840b695604097e3c21	eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	phpconfutils	e108303831029e5b8a9d24b991b1d62a	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	webapp	25b9b1696f5e698711f47d45c3d45e3e
+_md5_=2fa71c4e338a4415dc53caadbffda666
