@@ -7,27 +7,29 @@ DIST dokuwiki-2012-01-25a.tgz 2539659 SHA256 7a7f23ae6847db02bfc123d4292d7938662
 DIST dokuwiki-2012-10-13.tgz 2810228 SHA256 27119ad9b62514dccf3afa4545370d5a775eb71ab794365a498e966f8b6c3834 SHA512 be3b14db2835576fa6df784608b078d36f9df1d126aa094b5ccc5df5b841807a3732301f191d5977815cd6eedcda12a8da9f0a8a209091706c4fc27126cecdd6 WHIRLPOOL d0bd2ed27c9828eba7200d5888ba44b95dcca848540043ee47679bf8d8f01e4b8a83242476ccb24ecb573eb6af9586c44fd8b1e5bc766b32eb50c58751f3ceef
 DIST dokuwiki-2013-05-10a.tgz 2961725 SHA256 af14b81ebb81b2cafa9db385596519a991e7654074d90a6953dfb2d6f0965ea7 SHA512 dcbd9c204d80bdda15a16485df1a4e73337d12cb360fd922996d995cf4242d0c8612a7dbae2f701d1fac58364643b62212671284f96b8eb77be0c401b83cfce0 WHIRLPOOL 18348c0031341231cade2f8bdbc5a98c1baf228599104b9bf0544ddaa3110a162edd323a22f1eed7add5530ebc5b755fd43ee8d23ad4d4abe8a90714b481dd3d
 DIST dokuwiki-2013-12-08.tgz 3059058 SHA256 27b95f1b96e723141cde4c8eaac390f3a7d2370a177239207576554e46c9d071 SHA512 bb3c89acdb53c1ce43a7843250526a62e540b2caa32cd1538d17bcab1a90156abcac9586abb7ccc4a3f1fc1d77721c18a5360f7b8219ded046b8bd3318af5c08 WHIRLPOOL 01486816ef0d8b6cb98b49c4900a0aaa32d523b20e6faf99bfca79802a0184821570c512e4e5ad9f39c52237faddffe00d5da5bf85b0a5175da09f04be0733ed
+DIST dokuwiki-2014-05-05.tgz 3178431 SHA256 4bef5646f5ff14e1f26ba56b12ae92408ab00334e28757cb685bd94cd80cb9f7 SHA512 8777e2d4bf614256e8534e73a1998453e2bcb8bc34e63379cd2e921185a053560626214be8effa555af4ea15c5b0b9ce9f8bc3c2ad71cf704aaf87c6772d3655 WHIRLPOOL 1f9642d6595269349b93827bb6c560f0ffb5ce0457e8b644a98ca27cf36da69f3c2263072cca7eab987b239fe07da53967257c98edb33032ab601a80a8f6a1e2
 EBUILD dokuwiki-20120125.ebuild 1433 SHA256 97cc6c587ad9086163c5a3a83f1158deb72668fec9eace7881ebe471c4991cb2 SHA512 7805e2c3c14da6d532fb603e1e6ab138d13ac0b8747a2fb0c2d618f104d42085f469adceb572e8076d77bba47a57c4e000df59a6f5796134953ce62f409c76f1 WHIRLPOOL 6ab34a1b9518157b56e70b98c761186566be7211d3a1e179574b447957c4e031f7fa32277c63bad0ddd89580ac93314be6ad6203f78ef0d8ad2b63f9304e6192
 EBUILD dokuwiki-20120125a.ebuild 1434 SHA256 991d10e834c51b0465a7ac4cd4de42a97b32d1608abf455b8d63f6ee1be5468a SHA512 baf35fe97bebf04837dea71e2b8ab9a311ec3d11d431d6b5179a89a24cdc8bb1a6a4783238884afcd6cf5f59e7c420da045c3a111b8e570d722877579454fe6b WHIRLPOOL 32b96d3d14204d39fc5d0a463b7d25b7a469f02d33b0f41a4be0a927926b9fdda728ee1481393d09e06b02356b46e8eb61844e42b7a6ffc7a33a27b5ca849814
 EBUILD dokuwiki-20121013.ebuild 1428 SHA256 2a672d44e80fe82a5e5231434bf81639d1b0766a9a48fc9ad153d84de8f4af57 SHA512 339e32dbd35dd49abd05f7eb3d58547ebfa0244d8527422983e4ca7ff816058e2977ab784526bd071b9a47522db59ae59a8d946ee6abcbb53c0fbcb774fb4cbf WHIRLPOOL 5bd0274758da02fadfec327234c741148d9c9de94f09b49d28562ab753ea1bd55ea702d1640ef3577726634005d41d6b08366c4db4ffe4b99eaf7569379c5d86
 EBUILD dokuwiki-20130510a.ebuild 1758 SHA256 cb8f63814aa4b444089dba22dcfaa54a5da0e02954115a13afeb15aa4b5f4d50 SHA512 a53072378742c5bf175c20556cf0528ac72dae11f502f48a75a283fea1315d60e7ec0a6e12c385badd255dab041cdb20dc19fab2a38c5786ce69ac6de4e3b9c0 WHIRLPOOL bf3e6ed7a5ddb6fa27ac270a3d84543a73e4b079350f7104a1da29c508cb44f2360bd9b12ec67977940d993e6073a733b004e4bde68fc6689909f2cdb6aa3f1c
 EBUILD dokuwiki-20131208.ebuild 1438 SHA256 01f8740f60a1c712d2fb3cf8318a72ebc591e61c01af6ffa06dc29f7130530f8 SHA512 fa3e3c93bb565e70afcf612f2402795840e157d50d72022e2c90ac02e2de6de5baf8d2928e3a9a454687f11c9212a9552e4b82c3e26b9a711464b6cfe157af2b WHIRLPOOL ce721e710325670125216bfdb0e3ada690be6f5d52803795534c741e311a50b2cd6aec7ae2c5b9323b49a0e16683c6defb49cd24758914c701db1043d5117243
-MISC ChangeLog 10613 SHA256 525ebc2eb52f1a7d32c777e09176fc80f7ec43f7966911f5d463d97e52db081e SHA512 60190d50f7efb985e3645509776fa359f023d4c8aa8c43034764d2f6cfd26e40ab11a41430248c6575af9879db74118680851038cf3fbf765038436ee91c40a2 WHIRLPOOL db4eb72c97117ca85e4f42fa46bcb20b0710b2a4c7074d10eeb5c6f2a2eaea591bb4d823353e27a9aadc6bb8660779ccd9a0bdd462bf8a7e7143ab38a403b0aa
+EBUILD dokuwiki-20140505.ebuild 1438 SHA256 6e1bf2fcd5762bab00be2bbb4dddda8bdba76e1fd2e7335f191c91458e0356da SHA512 e0bbf157948ad44bc4311dde4b9ce46222ace83dc752f4cec3b45b83f331b7c587e18278825395da61712da0ba4140cb916ced92a656225ec9b7f575a1243cf2 WHIRLPOOL 5d27049ce6316a09c1a4483527a7a51944e3e0a44651c69695974c251396ed312ba29f8b54e0e11d2926cd2daf356cf286e40b8555dbccaddebe057a27533e30
+MISC ChangeLog 10788 SHA256 077cee2b614c359502e3ed88de3bcb36219e68e3f899fc2c91513ba3a538f3fd SHA512 9ab01af89b6a2a8d19fd2110f4c0f5e3e91c9ffece716fb6b00ccbfc14482a25182196b329e92405755fce9730e3e37f924ff4cdb49f02cb8d6a48d6f862b2f5 WHIRLPOOL 57bfb39faac04c32d29407f7e1da9069148758f1ea678a1d93ef32fe6f594dcd0b8aae7a1a71dfe55055487163266a33ccd557314eef457a761a9469f15692ec
 MISC metadata.xml 718 SHA256 f09401b27714eef1fa1d93931a6d79202861515bff4fc65696051ce3b02934dc SHA512 d7f28ddf829f1a652bb1595b739df5b3645ab67e0b4e625e5265e2e4cf91d9eec482ce17ae3d64446f6175b5620b4fda7522978bd196fc0f2681ab7cb9eac9d3 WHIRLPOOL af259deda9fe17c5fdd7c26d545ad983aaab3b95acb8e7f50e383d82d9dad59744c33d58bf79f69ae84ef9ffe22269c5caaedd89102b399874504bc7d036c2fe
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSzp66AAoJEC8ZTXQF1qEPSiMQAMMomIM4xDSrAXHbIrWWhboz
-3a3jTpRcJdF2BnHlxPcJ0v5QMVTm7+tyofN1SKq8ZZAnAeAuPMXk8DPOl8U3GBdA
-D5qFNhbG+TRPVPbDqNdkbCqKPH6nwxN4ED2oENKK/f1A5pbj1LeJgZQ2Rm8T0fjR
-Z219XZ6WRAFTKKDwbdbKQmyBEocTb1BIMnFtHTXQQAUct8kaRTi8IFPFTd/J3/JW
-oH9G/uvgxIYwxXrNgzj6oilaz33Sh3f4VK0BY5GIfqAn7GHDSY2uRST6PWTrLkDN
-3W0Iuyatk3L0i+RPfagSuAYidxgctDW/vp286pnypLRAs2M9yJW8LI7f+p2X3TPF
-NuYbZ6/eSWdTNi1JJDHHNQwuel+rKeGUq1l6wrv3QSQYrZVcDwFXGkZOgYKnaRqr
-/tirW21Y7CNr4SXaZ/Z0Z0oz73930y/quZCbjx71bs7ElMiCr8N+/2JNTD4nbAeq
-E4+jXedYXNezAlBiSWUgcXXkk7qlNwGVwCRKBQOnpEpFQY/3cfzBZRnZPepT7CBY
-6fJU+hfBrVHvJk2DDimHArhXtXXJnEUnKHQBXfMOuesaRMd9kWA20tC6j32kHqWm
-ctwPrQni1FLiAHZy4UaS7AK2SJ9kyDrQfgQPZWArUwmnme/FTSyNUmU6DNHsPCIf
-7c985bcCIgeJnZhr8U3q
-=0uUe
+iQIcBAEBCAAGBQJTjOVPAAoJEC8ZTXQF1qEPavcP+wb9E3p8UHUGhTArxzUG1y9s
+MyD3hPNRzednoKP6u8YpnQ7e8p7PLwpOY7VQu9atfbzpOYrujNiLwY4ByVtBsfIr
+nnc9NxzFERBY9aMy8fN7Dst7BUOlhstXEE015r7paPPqr3fSNi4bk22K8rR+rDbH
+uRk6lLLUlnbS+YugdBBjdAd8rDteRR32fncoznA3QSC/FObddpyIN1UHl6M7Evlz
+OQvJLRyus1q3ECO8zc6qNhl5uBxG7uFziYzAbdMFj/2O4qFVh17iJciReH58LoBn
+sw3oCk6LVjXms34dAeFAAnbXGMlVnmfJlqbaogPoQUrYrG0V1r1Bl7RPmAb1EGGk
+rNGrOvNQrwikMhwLn8xQZC4OIA4rNunCCCOIqI0aJILzDZPcZE8Xc53M3bQy31J2
+DxZUHgahHHPjtbh6esaTQNoE1+2FNv7duXrsSMO1nb1SI5bIscISzd2yq9vrBFdp
+H2mRL+4LOOb2egJCXFWa+47bLGWouD+h7Jqy/jwANsnDMSURslVbZcM91snNMdoD
+Caxeh9Guxf6VhB3CGd5VmAlXlCZFQ629cc93R6hWqgZsMwjIGbYP+IQLLyQYcBO8
+xKvVB3vwVJpqDdS/gWFXgv0293FwRe+Gq30Bev4E5xXv3z+vJo7A4bX5CwFaHYYu
+cpbnJ/h2iFmn7La8xafn
+=R+8l
 -----END PGP SIGNATURE-----
