@@ -1,6 +1,12 @@
 # ChangeLog for www-apps/dokuwiki
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/dokuwiki/ChangeLog,v 1.64 2014/01/09 13:05:57 jmbsvicetto Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/dokuwiki/ChangeLog,v 1.65 2014/06/02 21:00:16 jmbsvicetto Exp $
+
+*dokuwiki-20140505 (02 Jun 2014)
+
+  02 Jun 2014; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
+  +dokuwiki-20140505.ebuild:
+  20140505 version bump - fixes bug 512054.
 
 *dokuwiki-20131208 (09 Jan 2014)
 
