@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/rackspace-monitoring
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/rackspace-monitoring/ChangeLog,v 1.2 2014/03/17 15:59:03 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/rackspace-monitoring/ChangeLog,v 1.3 2014/06/02 21:01:10 prometheanfire Exp $
+
+*rackspace-monitoring-0.6.2 (02 Jun 2014)
+
+  02 Jun 2014; Matthew Thode <prometheanfire@gentoo.org>
+  +rackspace-monitoring-0.6.2.ebuild, -rackspace-monitoring-0.5.4.ebuild,
+  -rackspace-monitoring-0.6.0.ebuild:
+  fix for brokenness caused by broken dep in libcloud for cve
 
 *rackspace-monitoring-0.6.0 (17 Mar 2014)
 
